# short-stories

./: Homme-Etalon.docx  Homme-Etalon.md  README.md  pyproject.toml
short_stories/: docx2md.py
