[tool.poetry]
name = "short-stories"
version = "0.1.0"
description = ""
authors = ["DOS <davidolivier.saban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-docx = "^0.8.11"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
